sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:10: error: ';' expected but 'else' found.
        else { 
        ^